temp fix for width issues on mobile

--- a/imports/ui/components/pix/pixPool.less
+++ b/imports/ui/components/pix/pixPool.less
@@ -7,6 +7,7 @@ and (max-device-width: @breakpoint) {
     display: flex;
     flex-wrap: wrap;
     padding: 0.5 * @cell-margin;
+    width: 100% - 4*@cell-margin;
     .pixPoolItem {
       // width: @cell * 0.686;
       // height: @cell * 0.686;
